# mooncats

./: .gitignore  Cargo.toml  justfile
examples/: cat.rs
src/: doctree.rs  json.rs  lib.rs  location.rs  markdown.rs  mdbook.rs  workspace.rs
src/passes/: merge_class_tables.rs  mod.rs  parse_fields.rs  parse_items.rs  parse_set_fields.rs  parse_table_fields.rs
templates/: class.hbs  enum.hbs  field.hbs  function.hbs  global.hbs  meta_file.hbs  table.hbs  type_alias.hbs
test_book/: book.toml
testdata/: doc.json  test.lua
