[package]
name = "mooncats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
nonempty = { version = "0.10.0", features = ["serde", "serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
url = { version = "2.5.2", features = ["serde"] }
