[package]
name = "mooncats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = "4.5.8"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
mdbook = "0.4.40"
nonempty = { version = "0.10.0", features = ["serde", "serialize"] }
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tempdir = "0.3.7"
toml = "0.5.11"
url = { version = "2.5.2", features = ["serde"] }
